<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGreenDark">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvId"
        style="@style/TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/id"
        app:layout_constraintEnd_toStartOf="@id/tvName"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        style="@style/TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintEnd_toStartOf="@id/tvPhone"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tvId"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhone"
        style="@style/TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        app:layout_constraintEnd_toStartOf="@id/tvStartDate"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tvName"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStartDate"
        style="@style/TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/startDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tvPhone"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>