<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/llHeader"
        layout="@layout/row_employee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@id/srlEmployees"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srlEmployees"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/llActions"
        app:layout_constraintTop_toBottomOf="@id/llHeader">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEmployees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/llActions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorGreenLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/srlEmployees">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvInsert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:drawableTop="@android:drawable/ic_menu_add"
            android:gravity="center"
            android:text="@string/insert" />

        <View style="@style/divider" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:drawableTop="@android:drawable/ic_menu_edit"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/update" />

        <View style="@style/divider" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:drawableTop="@android:drawable/ic_menu_delete"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/delete" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>